alignment corrected of content box

--- a/Recipe Project/style.css
+++ b/Recipe Project/style.css
@@ -65,8 +65,20 @@ a{
     width: 70%;
     margin: auto;
     border: 1px solid black;
-}
+    display: flex ;
+    flex-direction: column;
+     gap: 100px
+} 
 .item{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+
+.rightBox img{
+    height: 300px;
+    width: 300px;
+    border-radius: 20px;
 }
